--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         // +++ Retrieve the URL for the text track, which is in this case a WebVTT caption file +++
         // +++ Call the getFile function to get the actual file from the URL +++
         url = myPlayer.mediainfo.textTracks[0].src;
+        // Note, if serving page via HTTPS, must ask for file also via HTTPS
+        url = url.replace('http:','https:');
         getFile(url, function(response) {
             if (response) {
                 responseEdited = response.replace(regex,'');
