Code update - make URL for transcript page protocol relative

--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
         });
 
       myPlayer.on('loadstart',function(){
+        var colonLocation;
         // +++ Retrieve the URL for the text track, which is in this case a WebVTT caption file +++
         // +++ Call the getFile function to get the actual file from the URL +++
         url = myPlayer.mediainfo.textTracks[0].src;
-        // Note, if serving page via HTTPS, must ask for file also via HTTPS
-        url = url.replace('http:','https:');
+        // Make URL for text track protocol relative (no http or https)
+        colonLocation = url.indexOf(':');
+        url =  url.substr(colonLocation + 1);
+
         getFile(url, function(response) {
             if (response) {
                 responseEdited = response.replace(regex,'');
