--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         });
 
       myPlayer.on('loadstart',function(){
+console.log('mediainfo',mediainfo);
         var colonLocation;
         // +++ Retrieve the URL for the text track, which is in this case a WebVTT caption file +++
         // +++ Call the getFile function to get the actual file from the URL +++
